修复CSS路径问题并准备部署

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <p>探索 Louiss 最新设计，感受奢华时尚与精湛工艺的完美融合</p>
             <a href="#new-arrivals" class="shop-now">立即探索</a>
         </div>
+        <img src="hero-image.jpg" alt="2025秋冬新品系列">
     </section>
 
     <!-- 当季新款 -->
@@ -60,7 +61,7 @@
                 <!-- 产品项1 -->
                 <div class="product-item" data-category="women" data-type="dresses">
                     <div class="product-image">
-                        <img src="images/new-dress-1.jpg" alt="当季新款连衣裙">
+                        <img src="new-dress-1.jpg" alt="当季新款连衣裙" class="product-image">
                     </div>
                     <div class="product-info">
                         <h4>秋冬丝绒连衣裙</h4>
@@ -73,7 +74,7 @@
                 <!-- 产品项2 -->
                 <div class="product-item" data-category="men" data-type="suits">
                     <div class="product-image">
-                        <img src="images/new-suit-1.jpg" alt="当季新款西装">
+                        <img src="new-suit-1.jpg" alt="当季新款西装" class="product-image">
                     </div>
                     <div class="product-info">
                         <h4>高级定制西装</h4>
@@ -86,7 +87,7 @@
                 <!-- 产品项3 -->
                 <div class="product-item" data-category="women" data-type="bags">
                     <div class="product-image">
-                        <img src="images/new-bag-1.jpg" alt="当季新款手袋">
+                        <img src="new-bag-1.jpg" alt="当季新款手袋" class="product-image">
                     </div>
                     <div class="product-info">
                         <h4>经典老花手袋</h4>
@@ -99,7 +100,7 @@
                 <!-- 产品项4 -->
                 <div class="product-item" data-category="men" data-type="shoes">
                     <div class="product-image">
-                        <img src="images/new-shoes-1.jpg" alt="当季新款鞋履">
+                        <img src="new-shoes-1.jpg" alt="当季新款鞋履" class="product-image">
                     </div>
                     <div class="product-info">
                         <h4>正装皮鞋</h4>
@@ -123,7 +124,7 @@
                 <!-- 产品项5 -->
                 <div class="product-item" data-category="women" data-type="shoes">
                     <div class="product-image">
-                        <img src="images/bestseller-shoes-1.jpg" alt="热卖鞋履">
+                        <img src="bestseller-shoes-1.jpg" alt="热卖鞋履">
                     </div>
                     <div class="product-info">
                         <h4>细高跟晚宴鞋</h4>
@@ -136,7 +137,7 @@
                 <!-- 产品项6 -->
                 <div class="product-item" data-category="men" data-type="shirts">
                     <div class="product-image">
-                        <img src="images/bestseller-shirt-1.jpg" alt="热卖衬衫">
+                        <img src="bestseller-shirt-1.jpg" alt="热卖衬衫">
                     </div>
                     <div class="product-info">
                         <h4>真丝商务衬衫</h4>
@@ -149,7 +150,7 @@
                 <!-- 产品项7 -->
                 <div class="product-item" data-category="women" data-type="dresses">
                     <div class="product-image">
-                        <img src="images/bestseller-dress-2.jpg" alt="热卖连衣裙">
+                        <img src="bestseller-dress-2.jpg" alt="热卖连衣裙">
                     </div>
                     <div class="product-info">
                         <h4>印花真丝连衣裙</h4>
@@ -162,7 +163,7 @@
                 <!-- 产品项8 -->
                 <div class="product-item" data-category="men" data-type="suits">
                     <div class="product-image">
-                        <img src="images/bestseller-suit-2.jpg" alt="热卖西装">
+                        <img src="bestseller-suit-2.jpg" alt="热卖西装">
                     </div>
                     <div class="product-info">
                         <h4>商务休闲西装</h4>
@@ -186,7 +187,7 @@
                 <!-- 产品项9 -->
                 <div class="product-item" data-category="women" data-type="dresses">
                     <div class="product-image">
-                        <img src="images/runway-dress-1.jpg" alt="秀款连衣裙">
+                        <img src="runway-dress-1.jpg" alt="秀款连衣裙">
                     </div>
                     <div class="product-info">
                         <h4>限量版走秀款连衣裙</h4>
@@ -199,7 +200,7 @@
                 <!-- 产品项10 -->
                 <div class="product-item" data-category="men" data-type="suits">
                     <div class="product-image">
-                        <img src="images/runway-suit-1.jpg" alt="秀款西装">
+                        <img src="runway-suit-1.jpg" alt="秀款西装">
                     </div>
                     <div class="product-info">
                         <h4>设计师合作款西装</h4>
@@ -212,7 +213,7 @@
                 <!-- 产品项11 -->
                 <div class="product-item" data-category="women" data-type="bags">
                     <div class="product-image">
-                        <img src="images/runway-bag-1.jpg" alt="秀款手袋">
+                        <img src="runway-bag-1.jpg" alt="秀款手袋">
                     </div>
                     <div class="product-info">
                         <h4>秀场限定手袋</h4>
@@ -225,7 +226,7 @@
                 <!-- 产品项12 -->
                 <div class="product-item" data-category="women" data-type="shoes">
                     <div class="product-image">
-                        <img src="images/runway-shoes-1.jpg" alt="秀款鞋履">
+                        <img src="runway-shoes-1.jpg" alt="秀款鞋履">
                     </div>
                     <div class="product-info">
                         <h4>创意总监系列高跟鞋</h4>
@@ -249,7 +250,7 @@
                 <!-- 精选图片1 -->
                 <div class="featured-item">
                     <div class="featured-image">
-                        <img src="images/new-shoes-1.jpg" alt="正装皮鞋">
+                        <img src="new-shoes-1.jpg" alt="正装皮鞋">
                     </div>
                     <div class="featured-info">
                         <h4>正装皮鞋</h4>
@@ -260,7 +261,7 @@
                 <!-- 精选图片2 -->
                 <div class="featured-item">
                     <div class="featured-image">
-                        <img src="images/bestseller-suit-2.jpg" alt="商务休闲西装">
+                        <img src="bestseller-suit-2.jpg" alt="商务休闲西装">
                     </div>
                     <div class="featured-info">
                         <h4>商务休闲西装</h4>
@@ -271,7 +272,7 @@
                 <!-- 精选图片3 -->
                 <div class="featured-item">
                     <div class="featured-image">
-                        <img src="images/bestseller-dress-2.jpg" alt="印花真丝连衣裙">
+                        <img src="bestseller-dress-2.jpg" alt="印花真丝连衣裙">
                     </div>
                     <div class="featured-info">
                         <h4>印花真丝连衣裙</h4>
@@ -282,7 +283,7 @@
                 <!-- 精选图片4 -->
                 <div class="featured-item">
                     <div class="featured-image">
-                        <img src="images/runway-suit-1.jpg" alt="设计师合作款西装">
+                        <img src="runway-suit-1.jpg" alt="设计师合作款西装">
                     </div>
                     <div class="featured-info">
                         <h4>设计师合作款西装</h4>
@@ -293,7 +294,7 @@
                 <!-- 精选图片5 -->
                 <div class="featured-item">
                     <div class="featured-image">
-                        <img src="images/new-bag-1.jpg" alt="经典老花手袋">
+                        <img src="new-bag-1.jpg" alt="经典老花手袋">
                     </div>
                     <div class="featured-info">
                         <h4>经典老花手袋</h4>
@@ -304,7 +305,7 @@
                 <!-- 精选图片6 -->
                 <div class="featured-item">
                     <div class="featured-image">
-                        <img src="images/new-dress-1.jpg" alt="秋冬丝绒连衣裙">
+                        <img src="new-dress-1.jpg" alt="秋冬丝绒连衣裙">
                     </div>
                     <div class="featured-info">
                         <h4>秋冬丝绒连衣裙</h4>
