--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
             <!-- 包装服务 -->
             <div class="service-card">
                 <div class="service-image">
-                    <img src="images/packaging-service.jpg" alt="奢华包装服务">
+                    <img src="packaging-service.jpg" alt="奢华包装服务">
                 </div>
                 <div class="service-content">
                     <div class="service-icon">
@@ -97,14 +97,14 @@
                     </ul>
                 </div>
                 <div class="service-image">
-                    <img src="images/delivery-service.jpg" alt="全球配送服务">
+                    <img src="delivery-service.jpg" alt="全球配送服务">
                 </div>
             </div>
 
             <!-- 售后政策 -->
             <div class="service-card">
                 <div class="service-image">
-                    <img src="images/after-sales.jpg" alt="售后政策">
+                    <img src="after-sales.jpg" alt="售后政策">
                 </div>
                 <div class="service-content">
                     <div class="service-icon">
@@ -137,14 +137,14 @@
                     </ul>
                 </div>
                 <div class="service-image">
-                    <img src="images/custom-service.jpg" alt="私人定制服务">
+                    <img src="custom-service.jpg" alt="私人定制服务">
                 </div>
             </div>
 
             <!-- 产品保养 -->
             <div class="service-card">
                 <div class="service-image">
-                    <img src="images/care-service.jpg" alt="产品保养服务">
+                    <img src="care-service.jpg" alt="产品保养服务">
                 </div>
                 <div class="service-content">
                     <div class="service-icon">
