--- a/product-detail.html
+++ b/product-detail.html
@@ -60,20 +60,20 @@
                 <!-- 产品图片 -->
                 <div class="product-images">
                     <div class="main-image">
-                        <img src="product-main.jpg" alt="秋冬丝绒连衣裙" id="mainProductImage">
+                        <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="秋冬丝绒连衣裙" id="mainProductImage">
                     </div>
                     <div class="thumbnail-images">
                         <div class="thumbnail" data-img="product-main.jpg">
-                            <img src="product-main.jpg" alt="缩略图1">
+                            <img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="缩略图1">
                         </div>
                         <div class="thumbnail" data-img="product-detail-1.jpg">
-                            <img src="product-detail-1.jpg" alt="缩略图2">
+                            <img src="https://images.unsplash.com/photo-1534308143481-c55f00be8bd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="缩略图2">
                         </div>
                         <div class="thumbnail" data-img="product-detail-2.jpg">
-                            <img src="product-detail-2.jpg" alt="缩略图3">
+                            <img src="https://images.unsplash.com/photo-1589642427987-b21773f3e29f?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="缩略图3">
                         </div>
                         <div class="thumbnail" data-img="product-detail-3.jpg">
-                            <img src="product-detail-3.jpg" alt="缩略图4">
+                            <img src="https://images.unsplash.com/photo-1551632436-cbf8dd35adfa?ixlib=rb-4.0.3&auto=format&fit=crop&w=200&q=80" alt="缩略图4">
                         </div>
                     </div>
                 </div>
